# ImplementationOfCommunicationBetweenProcesses

./: CMakeLists.txt
sockets/: Isocket.h  mock_socket.h  real_socket.h
src/: client.cpp  client.h  communication.cpp  communication.h  logger.cpp  logger.h  main_bus.cpp  manager.cpp  manager.h  message.cpp  message.h  server.cpp  server.h  user_1.cpp  user_2.cpp  user_3.cpp
